# cloud-storage-manager

./: LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg
cloud_storage_manager/: __init__.py  gcp_storage.py
cloud_storage_manager.egg-info/: PKG-INFO  requires.txt
src/cloud-storage-manager/: storage_schema.py
