[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cloud-storage-manager"
version = "0.1.0"
description = "A simple cloud storage manager for AWS S3 and GCP"
authors = [{name = "MUTHARASU A", email = "mutharasu39@gmail.com"}]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "boto3",
    "google-cloud-storage",
    "pydantic"
]
keywords = ["aws", "s3", "gcp", "cloud storage", "file upload"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11"
]

[project.optional-dependencies]
dev = ["pytest", "mypy", "black", "isort"]