[metadata]
name = my_package
version = 0.1.0
author = MUTHARASU
author_email = mutharasu39@gmail.com
description = A Python package for cloud storage handling with AWS and GCP
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yourusername/my_package
license = MIT
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.12
    Topic :: Software Development :: Libraries

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    aioboto3
    google-cloud-storage

[options.packages.find]
where = src
